# cisco-project

./: .gitignore  Jenkinsfile  README.md  dockerfile  interview.py  pyproject.toml  requirements.txt  start.sh
app/: JwksCache.py  __init__.py  __main__.py  a2a_client_handler.py  a2a_response_utils.py  agent_executors_langgraph.py  agent_registry_client.py  agent_router.py  chat_summarizer.py  config.py  history.py  llm.py  main.py  oauth2_client.py  oauth2_middleware.py  orchestration_graph.py  orchestration_nodes.py  orchestration_state.py  properties.py  push_notification_handler.py  redis_client.py  webhook_outcomes.py  worker.py
config/: cdcai-microsvc-uber-assistant-frontend-deployment-stg.yaml
docs/: A2A_TEST_MESSAGES.md  CORRECTED_FIRST_CHAT_PAYLOAD.json  END_TO_END_PAYLOADS.md  END_TO_END_PAYLOAD_REFERENCE.md  FIRST_CHAT_WELCOME_SPEC.md  JIRA_SESSION_EXPIRATION_IN_RESPONSE_METADATA.md  JIRA_SESSION_ID_BEST_PRACTICES_EXPLORATION.md  JIRA_WEBSOCKET_TIMEOUT_AND_HEARTBEAT.md  ORCHESTRATOR_PAYLOAD_SAMPLES.html  PAYLOAD_CONTRACT.md  RATE_THROTTLING_OPTIONS.html  SESSION_CONNECTION_WORKFLOW.md  SESSION_ID_IMPLEMENTATION_PLAN.md  SESSION_MAX_LIFETIME_RENEWAL_PLAN-v2.html  SESSION_MAX_LIFETIME_RENEWAL_PLAN.docx  SESSION_MAX_LIFETIME_RENEWAL_PLAN.html  UI_REQUEST_RESPONSE_SAMPLES.md  UI_REQUEST_RESPONSE_SPEC.docx  UI_REQUEST_RESPONSE_SPEC.html  UI_REQUEST_RESPONSE_SPEC.md  UI_REQUEST_RESPONSE_SPEC_V2.docx  WEBHOOK_MULTI_MESSAGE_INVESTIGATION.md  WEBSOCKET_SERVER_ARCHITECTURE.txt  WSR_Feb24_Mar9_2026.md  WSR_Mar10_Mar23_2026.md  WSR_Mar10_Mar23_2026_summary.md  (+1 more)
(+39 files in other folders)
